# Search-complexity-exercises

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
exercises_no_tests/hot_n_cold/: debug.txt
exercises_no_tests/hot_n_cold/src/: automated.cpp  main.cpp
math_lib/: CMakeLists.txt  math_lib.cpp  math_lib.hpp
src/: bin_search_dupl.hpp  bitonic_search.hpp  identity.hpp  min_local_matrix.hpp  searching.cpp  toimplement.cpp
src/questao_1/: minimum_local.hpp
src/questao_5_hot_n_cold/: tests.sh
src/questao_6/: flr_ceil_range.hpp
src/questao_7_hot_n_cold/: CMakeLists.txt
src/questao_8/: duplicate.hpp
src/questao_9/: sorted_rotated.hpp
tests/: CMakeLists.txt  a.out  test_01.cpp  test_01_ml.cpp  test_02.cpp  test_02_ml.cpp  test_03.cpp  test_03_ml.cpp  test_04_mml.cpp  test_05_mml.cpp  test_06_mml.cpp  test_07_mml.cpp  test_08_mml.cpp  test_09_bts.cpp  test_10_bts.cpp  test_11_bts.cpp  test_12_bts.cpp  test_13_bts.cpp  test_14_bts.cpp  test_15_bts.cpp  test_16_bsd.cpp  test_17_bsd.cpp  test_18_bsd.cpp  test_19_bsd.cpp  test_20_bsd.cpp  test_21_fcr.cpp  test_22_fcr.cpp  test_23_fcr.cpp  test_24_fcr.cpp  test_25_id.cpp  test_26_id.cpp  test_27_id.cpp  test_28_dup.cpp  test_29_dup.cpp  test_30_srot.cpp  test_31_srot.cpp  test_32_srot.cpp
